fable/test/semantic_error/dims_repeated_in_common.f
      program prog
      integer num(2)
      common /com/ num(2)
      end
